load.py deletes unused usage areas styles.less UsageArea saved with lower title

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -507,6 +507,12 @@ padding-top: 10px;
   margin-bottom: 20px;
   }
 
+  .wiki-link {
+    padding: 15px;
+    text-decoration: underline;
+
+  }
+
 
 }
 
@@ -608,8 +614,7 @@ body{
     padding-left: 4px;
 
   .guest {
-     color: #528177;
-    text-decoration: underline;
+     color: #9cb8b3;
     .font_open_sans_regular;
     padding-bottom: 3px;
 
@@ -625,6 +630,7 @@ body{
     }
 
   h3 {
+
     .font_open_sans_bold;
     font-size: 14px;
     text-align: center;
