--- a/main/templates/main/post/post_detail.html
+++ b/main/templates/main/post/post_detail.html
@@ -106,7 +106,7 @@
             {% endif %}
 
             {% if obj.is_plant and obj.wikipedia_link %}
- <div>
+ <div class="wiki-link">
 <a href="{{ obj.wikipedia_link }}">Ссылка на страницу Wikipedia</a>
 </div>
     {% endif %}
