Travnik.ru replaced to Medavi.ru in templates

--- a/main/templates/main/comment/email/answer_to_comment.html
+++ b/main/templates/main/comment/email/answer_to_comment.html
@@ -1,4 +1,4 @@
 <p>Здравствуйте!</p>
-<p>Получен ответ на Ваш отзыв <a href="{{ site_url }}{{ comment.parent.get_absolute_url }}">{{ comment.parent }}</a> на сайте Travnik.ru.</p>
+<p>Получен ответ на Ваш отзыв <a href="{{ site_url }}{{ comment.parent.get_absolute_url }}">{{ comment.parent }}</a> на сайте Medavi.ru.</p>
 <p>Чтобы прочитать ответ целиком, пройдите, пожалуйста, по ссылке <a href="{{ site_url }}{{ comment.get_absolute_url }}">{{ comment }}</a></p>
-<p>Вы можете отписаться от сообщений с сайта Travnik.ru, пройдя по этой ссылке: <a href="{{ site_url }}{{ comment.parent.user.user_profile.get_unsubscribe_url }}">{{ site_url }}{{ comment.parent.user.user_profile.get_unsubscribe_url }}</a></p>
+<p>Вы можете отписаться от сообщений с сайта Medavi.ru, пройдя по этой ссылке: <a href="{{ site_url }}{{ comment.parent.user.user_profile.get_unsubscribe_url }}">{{ site_url }}{{ comment.parent.user.user_profile.get_unsubscribe_url }}</a></p>
