User can update recipes Recipes in post look better Guest see login and signup invitation on recipe tab

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -504,6 +504,32 @@ padding-top: 10px;
       color: #57857c;
       list-style-type: disc !important;
     }
+
+    .related-recipe {
+      .recipe-title {
+        a {
+    font-size: 18px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    color: #57857c;
+          }
+      }
+
+      .recipe-body {
+
+      }
+
+      .line {
+      background-color: #528177;
+      height: 1px;
+      margin: 10px 0 26px 0;
+      }
+
+
+    margin-bottom: 10px;
+    }
+
   margin-bottom: 20px;
   }
 
@@ -513,6 +539,17 @@ padding-top: 10px;
 
   }
 
+#comment-form-tabs {
+  #comment-form-guest-tab-block {
+    a {
+    font-size: 18px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    color: #57857c;
+      }
+    }
+}
 
 }
 
