--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -549,6 +549,57 @@ padding-top: 10px;
     color: #57857c;
       }
     }
+#recipe-form {
+
+  #cke_id_body {
+  width: 700px !important;
+
+      @media (max-width: @container-lg) {
+	width: 600px !important;
+}
+
+    @media (max-width: @container-md) {
+	width: 500px !important;
+}
+
+    @media (max-width: @container-sm) {
+	width: 400px !important;
+}
+
+    @media (max-width: @screen-xs) {
+  width: 260px !important;
+
+  }
+
+        @media (max-width: 350px) {
+  width: 235px !important;
+
+  }
+
+
+
+  }
+
+
+ #id_usage_areas, #id_plants {
+   max-height: 500px;
+   overflow-y: scroll;
+   overflow-x: hidden;
+   margin-bottom: 20px;
+
+   label {
+     font-size: 0.8em;
+     font-weight: normal;
+   }
+
+ }
+
+  #id_title {
+    width: 90%;
+  }
+
+}
+
 }
 
 }
@@ -612,6 +663,18 @@ body{
     p {
       display: block;
     }
+
+    #id_usage_areas {
+
+  li {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    font-size: 0.8em;
+  }
+
+}
+
   }
 
 
@@ -885,13 +948,3 @@ label {
 
 }
 
-#id_usage_areas {
-
-  li {
-    -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    font-size: 0.8em;
-  }
-
-}
