Recipes count added to main page. Fix.

--- a/main/static/main/less/main.less
+++ b/main/static/main/less/main.less
@@ -897,7 +897,16 @@ label {
     @media (max-width: @container-sm) {
     display: none;
     }
-    }
+
+  label {
+    display: inline;
+  }
+
+  .main-recipes-count{
+    margin-bottom: 5px;
+  }
+
+  }
 
 
   td {
