--- a/main/templates/main/user/user_recipes.html
+++ b/main/templates/main/user/user_recipes.html
@@ -5,7 +5,7 @@
 {% include 'main/user/_user_profile_top_menu.html' with active_menu='user-recipes' %}
 
  <div>
- <h2>Отзывы</h2>
+ <h2>Рецепты</h2>
  <table class="table table-bordered">
  <thead>
  <tr>
